--- a/sesion4.MVCCasero/WebContent/css/menu2.css
+++ b/sesion4.MVCCasero/WebContent/css/menu2.css
@@ -1,7 +1,8 @@
 @CHARSET "ISO-8859-1";
 
 body{
-    /* background:url('http://www.wallpaperup.com/uploads/wallpapers/2012/10/21/20181/cad2441dd3252cf53f12154412286ba0.jpg'); */
+    background:url('../img/fondo.jpg');
+    background-size:cover;
     padding:50px;
 }
 
@@ -54,4 +55,29 @@ body{
         background-color: inherit;
         border-top:0 none;
     }
+}
+
+#btn {
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  -webkit-box-shadow: 0px 0px 25px #666666;
+  -moz-box-shadow: 0px 0px 25px #666666;
+  box-shadow: 0px 0px 25px #666666;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  background: #3498db;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+#btn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
 }
